feat(projects): Add projects
